--- a/04-css-llama/style.css
+++ b/04-css-llama/style.css
@@ -57,7 +57,9 @@ table {
   margin:0 auto;
   width:960px;
 }
-
+/* article floats */
+ article#left {float: left; margin:10px; padding:10px}
+ article#right {float: right; margin:10px; padding:10px}
 
 /* Clearfix */
 .clearfix:after {
