--- a/04-css-llama/style.css
+++ b/04-css-llama/style.css
@@ -57,9 +57,27 @@ table {
   margin:0 auto;
   width:960px;
 }
-/* article floats */
-.left {float: left; margin:10px; padding:10px}
-.right {float: right; margin:10px; padding:10px}
+/* articles*/
+
+
+#box-left { 
+position: absolute;
+top: 0;
+right: 50%; 
+bottom: 0;
+left: 0;
+}
+
+#box-right { 
+position: absolute; 
+top: 0; 
+right: 0; 
+bottom: 0; 
+left: 50%; 
+}
+
+/*image float */
+.left {float:left; margin:10px;} 
 
 /* Clearfix */
 .clearfix:after {
