--- a/04-css-llama/style.css
+++ b/04-css-llama/style.css
@@ -55,25 +55,23 @@ table {
 
 .centered { 
   margin:0 auto;
-  width:960px;
+  width:900px;
 }
 /* articles*/
 
 
 #box-left { 
 position: absolute;
-top: 0;
-right: 50%; 
-bottom: 0;
-left: 0;
+left: 50%; 
+padding: 20px;
+margin: 5px;
 }
 
 #box-right { 
 position: absolute; 
-top: 0; 
-right: 0; 
-bottom: 0; 
-left: 50%; 
+right: 50%;  
+padding: 20px;
+margin: 5px;
 }
 
 /*image float */
