--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -73,16 +73,13 @@ table {
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
 
-header#site-header {
-  position:relative;
-  text-indent:-9999px; 
-  display:block;	   
-  position:relative;
-  background:url(logo.gif) no-repeat left top;}
-#main-menu {
-  position:absolute;
-  
-}
-#main-menu li{}
-#footer
+header#site-header {position:relative; text-indent:-9999px; display:block; position:relative;  
+					background:url(logo.gif) no-repeat left top;}
+
+nav#main-menu { height:30px; background-color:white; }
+nav#main-menu ul li { display:block; float:left; padding:0 5px; }
+nav#main-menu ul li a { display:block; color:white; padding:5px 5px; background-color:white; }
+section#left  {float:left; margin:10px;}
+section#right {float:right; margin:10px;}
+#footer{position:absolute; clear:both; padding:10px;}
 
