--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -1,6 +1,6 @@
 
 
-/* Meyer Reset */
+/* -----------Begin Meyer Reset----------- */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -69,17 +69,39 @@ table {
 	height: 0;
 }
  
-.clearfix { display: inline-block; }
-html[xmlns] .clearfix { display: block; }
-* html .clearfix { height: 1%; }
+/* -----------End Reset----------- */
 
-header#site-header {position:relative; text-indent:-9999px; display:block; position:relative;  
-					background:url(logo.gif) no-repeat left top;}
+body { width:960px; margin:0 auto; }
 
-nav#main-menu { height:30px; background-color:white; }
-nav#main-menu ul li { display:block; float:left; padding:0 5px; }
-nav#main-menu ul li a { display:block; color:white; padding:5px 5px; background-color:white; }
-section#left  {float:left; margin:10px;}
-section#right {float:right; margin:10px;}
-#footer{position:absolute; clear:both; padding:10px;}
+/* -----------Header----------- */
 
+header#site-header {position: relative; height: 100px; }
+
+#site-header h1 a {
+ 	display:block;
+	position:absolute; 
+	width:445px; 
+	height:95px;  
+	background:url(images/dogvscat-logo.gif) no-repeat top center; 
+	text-indent:-9999px;
+ }
+
+/* -----------Main Navigation----------- */
+nav#main-menu { height:50px; border: 3px 0;}
+nav#main-menu ul li{
+	display: block;
+	float: left
+	padding: 0px 15px;}
+nav#main-menu ul li a{
+	display: block;
+	padding: 5px 10px;}
+	
+/* -----------Body Content----------- */
+article#main-article{
+	float: left; width: 40%; padding: 15px 10px;	
+}
+/* -----------Footer----------- */
+
+footer#site-footer{ 
+   clear:both; padding:10px 0px; 
+}
