--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -102,6 +102,6 @@ article#main-article{
 }
 /* -----------Footer----------- */
 
-footer#site-footer{ 
+#footer{ 
    clear:both; padding:10px 0px; 
 }
