--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -63,7 +63,7 @@ table {
  
 /* -----------End Reset----------- */
 
-body { width:960px; 
+body {  width:960px; 
 		margin:0 auto; }
 
 /* -----------Header----------- */
@@ -82,19 +82,20 @@ header#site-header h1 a {
 /* -----------Main Navigation----------- */
 nav#main-menu { 
 	height:80px; 	
-	position:absolute;			
+	position:absolute;
+	margin: 20px 0;	
+	top:500px;		
 	}
-nav#main-menu ul li{
-	display: block;
+nav#main-menu li{
 	float: left;
-	border: 3px 0; 
-	border-color: black;
-	padding: 0px 30px;
+	border: 3px 0 solid #000; 
 	}	
-nav#main-menu ul li a{
+nav#main-menu li a{
 	display: block;
-	padding: 5px 20px;
+	padding: 15px 400px;
+	text-decoration:none;
 	}
+nav#main-menu li a:hover {text-decoration:underline; }
 	
 /* -----------Body Content----------- */
 article.main-article{
@@ -105,7 +106,7 @@ article.main-article{
 /* -----------Footer----------- */
 
 #footer{ 
-	position:
-   clear:both; 
-   padding:10px 0px; 
+	position:relative;
+   	clear:both; 
+   	padding:10px 0px; 
 }
