--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -75,28 +75,25 @@ header#site-header h1 a {
 	position:absolute; 
 	width:445px; 
 	height:95px;  
-	background:url(images/dogvscat-logo.gif) no-repeat bottom; 
+	background:url(images/dogvscat-logo.gif) no-repeat top; 
 	text-indent:-9999px;
  }
 
 /* -----------Main Navigation----------- */
-nav#main-menu { 
-	height:80px; 	
-	position:absolute;
-	margin: 20px 0;	
-	top:500px;	
+nav#menu { 
+	height:60px; 	
 	background-color:purple;	
 	}
-nav#main-menu li{
+nav#menu li{
 	float: left;
 	border: 3px 0 solid #000; 
 	}	
-nav#main-menu li a{
+nav#menu li a{
 	display: block;
 	padding: 15px 400px;
 	text-decoration:none;
 	}
-nav#main-menu li a:hover {text-decoration:underline; }
+nav#menu li a:hover {text-decoration:underline; }
 	
 /* -----------Body Content----------- */
 article.main-article{
