--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -88,9 +88,7 @@ nav#menu {
 nav#menu li{
 	float: left;
 	display: block;
-	padding:10pc 5px;
-	border: 3px 0 solid #000; 
-
+	padding:10px 5px;
 	}	
 nav#menu li a{
 	display: block;
