--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -89,7 +89,7 @@ nav#menu {
 	}
 nav#menu ul li {
 	float:left;
-	padding 10px 30px;
+	padding: 10px 30px;
 	}	
 nav#menu ul li a {
 	display:block;
