--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -63,9 +63,10 @@ table {
  
 /* -----------End Reset----------- */
 
-body {  width:960px; 
-		margin:0 auto; }
-
+body { 
+ 	margin:0 auto;
+  	width:960px;
+}
 /* -----------Header----------- */
 
 header#site-header {position: relative; height: 100px; }
@@ -109,6 +110,5 @@ article.main-article {
 
 #footer{ 
 	position:relative;
-   	clear:both; 
    	padding:10px 0px; 
 }
