--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -108,7 +108,7 @@ article.main-article {
 	}
 /* -----------Footer----------- */
 
-#footer{ 
+footer#site-footer{ 
+	clear:both;
 	position:relative;
-   	padding:10px 0px; 
 }
