--- a/05-css-cats-vs-dogs/reset.css
+++ b/05-css-cats-vs-dogs/reset.css
@@ -71,15 +71,15 @@ body {
 /*----------Main Styles-----------*/
 h1{
 	padding:10px;
-	font:2.0em Georgia, "Times New Roman", Times, serif;
+	font:1.8em Georgia, "Times New Roman", Times, serif;
 	font-weight:bold;
 }
 p{
-	font:1.2em Georgia, "Times New Roman", Times, serif;
-	line-height:1.5em;
+	font:1em Georgia, "Times New Roman", Times, serif;
+	line-height:1.3em;
 }
 img{
-	height:60%;
+	height:100%;
 	width:60%;
 }
 /* -----------Header----------- */
@@ -93,8 +93,8 @@ header#site-header h1 a {
 	height:95px;  
 	background:url(images/dogvscat-logo.gif) no-repeat top; 
 	text-indent:-9999px;
-	font-size:20px;
-	text-transform:uppercase;
+
+	margin: 10px 0px;
  }
 
 /* -----------Main Navigation----------- */
@@ -114,6 +114,8 @@ nav#menu ul li a {
 	font-size:16px;
 	text-decoration:none;
 	color:#000;
+	font-size:20px;
+	text-transform:uppercase;
 	}
 nav#menu ul li a:hover {text-decoration:underline; }
 	
