--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -50,14 +50,12 @@ table {
 	border-spacing: 0;
 }
 /********** end reset ************/
-
 body{width:80%;
 	margin:0 auto;
-	}
-	
-}
+	}	
 /**********header&top-nav**********/
-nav#top-nav {position:absolute;
+nav#top-nav {
+	position:absolute;
 	right:30px;
 	top:5px;
 }
@@ -78,7 +76,6 @@ header#site-wrapper h1 a{
 	 height:123px;  
 	 background:url(images/logo.png) no-repeat top left; 
 	 text-indent:-9999px;
-
 }
 /*************main-nav**************/
 nav#main-nav{position:relative;
