--- a/07-css-robots/style.css
+++ b/07-css-robots/style.css
@@ -184,7 +184,7 @@ aside#sidebar img{
 	padding-top:10px;
 }
 /* ------------- footer ------------- */
-footer-wrapper{
+#footer-wrapper{
 	background-color:#744918;
 	width:100%;
 }
